# design_model

./: .gitignore  CLAUDE.md  README.md  compare_models.py  debug_steady.py  design_search_5um.yaml  experimental_testing_plan.md  extract_experiments.py  phase2_verification_test.py  phase3_parameter_test.py  pyproject.toml  step_gen_deepresearch.md  test_30um.yaml  test_device.yaml  test_phase3.py  test_physics_based.py  variable_naming_physics_plan.md
.claude/: settings.local.json
configs/: design_search_10um.yaml  design_search_5um.yaml  example_stage_wise.yaml  test_30um.yaml  test_stage_wise_v3.yaml  v5_30.yaml  w11.yaml  w11_stage_wise.yaml
docs/: PRD_v1.md  README.md  capability_summary.md  edge_emulsion_linear_model_updates.md  feature_tour_tests.md  features_v2.md  feedback_legacy.txt.txt  from_integration_notes.txt  hydraulic_model_analysis.md  implementation_plan.md  implementation_plan_v2.md  step_emulsion_time_state_model_proposal_v2.md  time_state_model_summary.md  user_guide.md
duty_test/: duty_factor_analysis.json
examples/: design_search_template.yaml  device_template.yaml  example_operating_map.yaml  example_single.yaml  example_sweep.yaml  w11_1.yaml  w11_old.yaml
stepgen/: __init__.py  cli.py  config.py
stepgen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
stepgen_seed/: README.md  __init__.py  example_run.py  hydraulics.py  resistance.py
test_results/: IMPLEMENTATION_LOG.md
tests/: test_cli.py  test_comparison.py  test_config_small.yaml  test_design_search.py  test_experiments.py  test_generator.py  (+13 more)
(+197 files in other folders)
